Enhance UI and update image generation logic
Updated title and improved styling for better user experience. Modified button functionality and error handling for image generation.

--- a/index.html
+++ b/index.html
@@ -3,64 +3,145 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Grok REIMAGINE</title>
-  <script src="https://cdn.jsdelivr.net/npm/react@18/umd/react.development.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.development.js"></script>
+  <title>Grok REIMAGINE - Free AI Image Generator</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <style>
-    body { font-family: system-ui, sans-serif; max-width: 900px; margin: 0 auto; padding: 20px; }
-    textarea { width: 100%; height: 100px; margin: 15px 0; padding: 12px; font-size: 16px; }
-    button { padding: 12px 24px; font-size: 16px; cursor: pointer; }
-    #result img { max-width: 100%; margin-top: 20px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-    .loading { color: #666; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      background: #f8f9fa;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #1a73e8;
+    }
+    .container {
+      background: white;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+    textarea {
+      width: 100%;
+      min-height: 120px;
+      padding: 12px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      resize: vertical;
+      margin-bottom: 15px;
+    }
+    button {
+      background: #1a73e8;
+      color: white;
+      border: none;
+      padding: 12px 28px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    button:hover {
+      background: #0d65d6;
+    }
+    button:disabled {
+      background: #aaa;
+      cursor: not-allowed;
+    }
+    #status {
+      margin-left: 15px;
+      color: #555;
+      font-style: italic;
+    }
+    #result {
+      margin-top: 25px;
+      text-align: center;
+    }
+    #result img {
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 6px 25px rgba(0,0,0,0.15);
+      margin-top: 15px;
+    }
+    .footer {
+      margin-top: 40px;
+      text-align: center;
+      color: #777;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Grok REIMAGINE</h1>
-  <p style="color:#e74c3c">Early prototype • Needs your own xAI API key in backend</p>
+  <div class="container">
+    <h1>Grok REIMAGINE</h1>
+    <p style="text-align:center; color:#555;">
+      Free AI image generator • No sign-up • Powered by public Pollinations API
+    </p>
 
-  <textarea id="prompt" placeholder="Describe the image you want to generate... (be detailed!)"></textarea>
+    <textarea id="prompt" placeholder="Describe your image... (e.g., cyberpunk city at night with neon lights, very detailed)"></textarea>
 
-  <div>
-    <button onclick="generateImage()">Generate Image</button>
-    <span id="status" class="loading"></span>
+    <div>
+      <button id="generateBtn">Generate Image</button>
+      <span id="status"></span>
+    </div>
+
+    <div id="result"></div>
   </div>
 
-  <div id="result"></div>
+  <div class="footer">
+    This is a prototype • Images generated via <a href="https://pollinations.ai" target="_blank">Pollinations.ai</a> public endpoint<br>
+    Quality & availability may vary • Enjoy responsibly!
+  </div>
 
   <script>
-    const BACKEND_URL = "https://your-backend-domain.com"; // ← CHANGE THIS after deployment!
+    const generateBtn = document.getElementById('generateBtn');
+    const promptInput = document.getElementById('prompt');
+    const status = document.getElementById('status');
+    const resultDiv = document.getElementById('result');
 
-    async function generateImage() {
-      const prompt = document.getElementById('prompt').value.trim();
+    generateBtn.addEventListener('click', async () => {
+      const prompt = promptInput.value.trim();
       if (!prompt) {
-        alert("Please enter a prompt first!");
+        alert('Please enter a description first!');
         return;
       }
 
-      const status = document.getElementById('status');
-      const resultDiv = document.getElementById('result');
-
-      status.textContent = "Generating... (can take 10-30 seconds)";
-      resultDiv.innerHTML = "";
+      generateBtn.disabled = true;
+      status.textContent = 'Generating... (usually 5–30 seconds)';
+      resultDiv.innerHTML = '';
 
       try {
-        const response = await axios.post(`${BACKEND_URL}/api/generate`, { prompt });
-        const data = response.data;
+        // Option 1: Call your own backend proxy (recommended for rate limiting & future features)
+        // const response = await axios.post('https://your-backend-domain.com/api/generate', { prompt });
+        // const imageUrl = response.data.imageUrl;  // adjust based on what your backend returns
 
-        if (data.data && data.data[0]?.url) {
-          resultDiv.innerHTML = `<img src="${data.data[0].url}" alt="Generated image"/>`;
-        } else {
-          resultDiv.innerHTML = "<p style='color:red'>No image returned. Check console.</p>";
-        }
-      } catch (err) {
-        console.error(err);
-        resultDiv.innerHTML = `<p style='color:red'>Error: ${err.response?.data?.error || err.message}</p>`;
+        // Option 2: Direct call to Pollinations public endpoint (simplest, no backend needed!)
+        const encodedPrompt = encodeURIComponent(prompt);
+        const imageUrl = `https://image.pollinations.ai/prompt/${encodedPrompt}?width=1024&height=1024&model=flux&nologo=true&seed=${Date.now()}`;
+
+        // Display the image (it generates on-the-fly when the URL is loaded)
+        resultDiv.innerHTML = `
+          <img src="${imageUrl}" alt="AI Generated Image" 
+               onload="this.style.opacity=1" 
+               style="opacity:0; transition:opacity 0.5s;">
+          <p style="margin-top:10px; color:#666;">
+            Generated with Flux model • <a href="${imageUrl}" target="_blank">Direct link</a>
+          </p>
+        `;
+
+      } catch (error) {
+        console.error(error);
+        resultDiv.innerHTML = `<p style="color:red;">Error: ${error.message || 'Something went wrong'}</p>`;
       } finally {
-        status.textContent = "";
+        generateBtn.disabled = false;
+        status.textContent = '';
       }
-    }
+    });
   </script>
+
 </body>
 </html>
